--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/prismjs": "^1.26.5",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -42,6 +43,7 @@
 		]
 	},
 	"dependencies": {
-		"mqtt": "^5.13.1"
+		"mqtt": "^5.13.1",
+		"prismjs": "^1.30.0"
 	}
 }
